tooling/nargo_cli/tests/snapshots/execution_success/bit_not/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "four_as_u32",
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        },
        "visibility": "private"
      }
    ],
    "return_type": null,
    "error_types": {}
  },
  "bytecode": "H4sIAAAAAAAA/6XOQQqAMAwEQAs+KGmSdnPzKxbT/z9BREVB9OJcFvawbBouaXg6u+lIoaIaNQcLz5S9wUitFTDYYEuGSEBRvXklZ5Xgbi6ddvct+ke3b+PH9zcrS3zcEvQAAAA=",
  "debug_symbols": "jZDRCoMwDEX/Jc99UNnm5q+MIbVGKYS2xHYwxH9fFN30YbCnNLk5t+SO0GKT+tq6zg9Q3Udo2BLZviZvdLTeyXScFGxtHRlRRrDThQqa0UWoXCJS8NSUlqUhaLfUqFnUTAG6VqoYdpZwfk3qS2e/0fxSrnBeXj/4+X/+dlr5osgP/EM6bSwfLoZMFqfZjq1uCNcUuuTMLpT4CpuyxRbYG2wT42y3aPLBGw==",
  "file_map": {
    "50": {
      "source": "fn main(four_as_u32: u32) {\n    let four_as_u8: u8 = 4;\n    let not_four_as_u8: u8 = !four_as_u8;\n    assert_eq(not_four_as_u8, 251);\n\n    let not_four_as_u32: u32 = !four_as_u32;\n    assert_eq(not_four_as_u32, 4294967291);\n}\n",
      "path": ""
    }
  },
  "names": [
    "main"
  ],
  "brillig_names": []
}
